tests/neg-custom-args/safe-init/override10.scala
trait Foo {
  def f: () => String = () => message
  def message: String
  val m = f
}

class Bar extends Foo {
  val message = "hello"
  f()                       // error
  m()                       // error
}